# tomahawk

./: .gitignore  .gitmodules  AUTHORS  CMakeLists.txt  CMakeLists.txt.user.2.3pre1  CPack.cmake  CPackOptions.cmake.in  ChangeLog  Doxyfile  PACKAGING.md  README  README.md  TomahawkAddLibrary.cmake  TomahawkAddPlugin.cmake  TomahawkBuildTreeSettings.cmake.in  TomahawkCPack.cmake  TomahawkConfig.cmake.in  TomahawkConfigVersion.cmake.in  TomahawkUse.cmake  TomahawkUse.cmake.in  default.nix  gen_resources.sh  resources.qrc
qxtweb-standalone/: CMakeLists.txt  README.txt
qxtweb-standalone/example/: myservice.h
qxtweb-standalone/qxtweb/: QxtAbstractWebService  QxtAbstractWebSessionManager  QxtHttpServerConnector  QxtSendmail  QxtWeb  QxtWebCgiService  QxtWebContent  QxtWebFileUploadEvent  QxtWebSlotService  qxtabstracthttpconnector.cpp  qxtabstracthttpconnector.h  qxtabstractwebservice.cpp  qxtabstractwebsessionmanager.h  qxtabstractwebsessionmanager_p.h  qxtboundcfunction.h  qxtboundfunction.h  qxthtmltemplate.cpp  qxthttpserverconnector.cpp  qxthttpsessionmanager.cpp  qxtmetaobject.h  qxtmetatype.h  qxtnull.cpp  qxtnull.h  qxtnullable.h  qxtwebcgiservice.h  qxtwebcgiservice_p.h  qxtwebcontent.h  qxtwebevent.cpp  qxtwebevent.h  qxtwebservicedirectory_p.h  qxtwebslotservice.cpp
rtaudio/: CMakeLists.txt  RtAudio.cpp  RtAudio.h  readme
src/: AboutDialog.cpp  AboutDialog.h  AboutDialog.ui  AccountDelegate.cpp  AccountDelegate.h  AccountFactoryWrapper.cpp  AccountFactoryWrapper.h  AccountFactoryWrapper.ui  AccountFactoryWrapperDelegate.cpp  AccountFactoryWrapperDelegate.h  AclRegistryImpl.cpp  AclRegistryImpl.h  AtticaManager.cpp  AtticaManager.h  AudioControls.cpp  AudioControls.h  AudioControls.ui  CMakeLists.linux.txt  CMakeLists.osx.cmake  CMakeLists.osx.txt  CMakeLists.txt  CMakeLists.unix.cmake  CMakeLists.unix.txt  CMakeLists.win32.cmake  CMakeLists.win32.txt  CPack.txt  Config.h.in  ConfigDelegateBase.h  ContainedMenuButton.cpp  ContainedMenuButton.h  DelegateConfigWrapper.cpp  DiagnosticsDialog.cpp  DiagnosticsDialog.h  DiagnosticsDialog.ui  GetNewStuffDelegate.cpp  GetNewStuffDelegate.h  GetNewStuffDialog.cpp  GetNewStuffDialog.h  GetNewStuffDialog.ui  GetNewStuffModel.cpp  (+122 more)
src/Qocoa/: qocoa_mac.h  qsearchfield.cpp  qsearchfield.h  qsearchfield_mac.mm
src/accounts/: AccountDllMacro.h  CMakeLists.txt  accountdllmacro.h
src/active/: CMakeLists.txt  tomahawktouchwindow.cpp  tomahawktouchwindow.h  tomahawkwindowdeclarative.cpp  tomahawkwindowdeclarative.h
src/audio/: audioengine.cpp  audioengine.h  flactranscode.cpp  flactranscode.h  madtranscode.cpp  madtranscode.h  rtaudiooutput.cpp  rtaudiooutput.h  transcodeinterface.h  vorbistranscode.cpp  vorbistranscode.h
src/breakpad/: BreakPad.cpp  BreakPad.h
src/crashreporter/: CMakeLists.txt  CrashReporter.cpp  CrashReporter.h  CrashReporter.ui  CrashReporterConfig.h.in  main.cpp  resources.qrc
src/database/: database.cpp  database.h  databasecollection.cpp  databasecollection.h  databasecommand.cpp  databasecommand.h  databasecommand_addfiles.cpp  databasecommand_addfiles.h  databasecommand_addsource.cpp  databasecommand_addsource.h  databasecommand_allalbums.cpp  databasecommand_allalbums.h  databasecommand_alltracks.cpp  databasecommand_alltracks.h  databasecommand_collectionstats.cpp  databasecommand_collectionstats.h  databasecommand_createdynamicplaylist.cpp  databasecommand_createdynamicplaylist.h  databasecommand_createplaylist.cpp  databasecommand_createplaylist.h  databasecommand_deletedynamicplaylist.cpp  databasecommand_deletedynamicplaylist.h  databasecommand_deleteplaylist.cpp  databasecommand_deleteplaylist.h  databasecommand_dirmtimes.h  databasecommand_importplaylist.cpp  databasecommand_importplaylist.h  databasecommand_loadalldynamicplaylists.cpp  databasecommand_loadalldynamicplaylists.h  databasecommand_loadallplaylists.cpp  databasecommand_loadallplaylists.h  databasecommand_loaddynamicplaylist.cpp  databasecommand_loaddynamicplaylist.h  databasecommand_loadfile.cpp  databasecommand_loadfile.h  databasecommand_loadops.cpp  databasecommand_loadops.h  databasecommand_loadplaylistentries.cpp  databasecommand_loadplaylistentries.h  databasecommand_modifyplaylist.cpp  (+28 more)
src/dynamic/: DynamicControl.cpp  DynamicControl.h  DynamicPlaylist.cpp  DynamicPlaylist.h  DynamicPlaylistModel.cpp  DynamicPlaylistModel.h  GeneratorFactory.cpp  GeneratorFactory.h  GeneratorInterface.cpp  GeneratorInterface.h  dynamiccontrol.cpp  dynamiccontrol.h  dynamicplaylist.cpp  dynamicplaylist.h  generatorfactory.cpp  generatorfactory.h  generatorinterface.cpp  generatorinterface.h
src/infoplugins/: CMakeLists.txt  InfoPluginDllMacro.h
src/infosystem/: infosystem.cpp  infosystemcache.cpp  infosystemcache.h
src/infowidgets/: sourceinfowidget.cpp  sourceinfowidget.h  sourceinfowidget.ui
src/jabber/: jabber.h  jabber_p.cpp  jabber_p.h
src/jobview/: JobStatusDelegate.cpp  JobStatusDelegate.h  JobStatusModel.cpp  JobStatusModel.h  JobStatusView.cpp  JobStatusView.h  PipelineStatusItem.cpp
src/junk/: remoteioconnection.cpp  remoteioconnection.h  remoteiodevice.cpp  remoteiodevice.h
src/libtomahawk/: .filemetadata.swo  .filemetadata.swp  AclRegistry.cpp  AclRegistry.h  ActionCollection.cpp  ActionCollection.h  Album.cpp  Album.h  AlbumPlaylistInterface.cpp  AlbumPlaylistInterface.h  Album_p.h  Artist.cpp  Artist.h  ArtistPlaylistInterface.cpp  AtticaManager.cpp  (+150 more)
src/libtomahawk-playdarapi/: Api_v1.cpp  Api_v1.h  Api_v1_5.cpp  Api_v1_5.h  CMakeLists.txt  PlaydarAPIDllMacro.h  PlaydarApi.cpp  PlaydarApi.h  PlaydarApi_p.h  StatResponseHandler.cpp  StatResponseHandler.h
src/libtomahawk-widgets/: CMakeLists.txt  Dashboard.cpp  Dashboard.h  Dashboard.ui  DashboardWidget.ui  NetworkActivityWidget.cpp  NetworkActivityWidget.h  NetworkActivityWidget.ui  NetworkActivityWidget_p.h  NetworkActivityWorker.cpp  NetworkActivityWorker.h  NetworkActivityWorker_p.h  PlaylistDelegate.cpp  PlaylistDelegate.h  PlaylistWidget.cpp  PlaylistWidget.h  SocialPlaylistWidget.cpp  SocialPlaylistWidget.h  SocialPlaylistWidget.ui  WidgetsDllMacro.h
(+2272 files in other folders)
